--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 03:05:06 2018</p>
+         Last Run: Sat Nov 17 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Clear</td>
                         <td>-12</td>
                         <td>-16</td>
-                        <td>2</td>
+                        <td>0</td>
                         <td>84</td>
                         <td>0</td>
                         <td>6</td>
@@ -45,7 +45,7 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
@@ -57,8 +57,8 @@
                         <td>Clear</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>1</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -69,8 +69,8 @@
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>0</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -176,10 +176,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2",
-                 "1"
+                 "0",
+                 "1",
+                 "1",
+                 "0"
                ]
              },
              {
@@ -190,8 +190,8 @@
                "data":[
                  "84",
                  "76",
-                 "67",
-                 "57"
+                 "66",
+                 "56"
                ]
              },
              {
@@ -238,12 +238,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 03:05:06 2018</p>
+         Last Run: Sat Nov 17 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -292,7 +293,7 @@
                         <td>7</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NW</td>
@@ -407,7 +408,7 @@
                "data":[
                  "53",
                  "52",
-                 "54"
+                 "53"
                ]
              },
              {
@@ -458,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 03:05:06 2018</p>
+         Last Run: Sat Nov 17 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +484,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -495,7 +496,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -620,8 +621,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "68",
                  "69",
-                 "70",
                  "71"
                ]
              },
@@ -673,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 03:05:06 2018</p>
+         Last Run: Sat Nov 17 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -712,7 +713,7 @@
                         <td>0</td>
                         <td>55</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SW</td>
                         <td>66</td>
                      </tr>
@@ -724,9 +725,9 @@
                         <td>0</td>
                         <td>57</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -848,7 +849,7 @@
                "data":[
                  "60",
                  "66",
-                 "71"
+                 "70"
                ]
              }
            ]
