--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 06:05:02 2018</p>
+         Last Run: Sat Nov 17 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -32,37 +32,37 @@
                         <td>08:00 AM</td>
                         <td>Clear</td>
                         <td>-14</td>
-                        <td>-14</td>
+                        <td>-19</td>
                         <td>0</td>
-                        <td>88</td>
+                        <td>93</td>
                         <td>0</td>
-                        <td>5</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>14</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-11</td>
-                        <td>-15</td>
+                        <td>-16</td>
                         <td>0</td>
-                        <td>79</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-8</td>
+                        <td>-13</td>
                         <td>0</td>
-                        <td>65</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -102,9 +102,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-14",
-                 "-15",
-                 "-10",
+                 "-19",
+                 "-16",
+                 "-13",
                  "-6"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-14",
                  "-11",
-                 "-6",
+                 "-8",
                  "-3"
                ]
              }
@@ -188,9 +188,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "79",
-                 "65",
+                 "93",
+                 "82",
+                 "69",
                  "56"
                ]
              },
@@ -200,9 +200,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "12",
-                 "2",
+                 "24",
+                 "19",
+                 "11",
                  "0"
                ]
              }
@@ -244,7 +244,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 06:05:02 2018</p>
+         Last Run: Sat Nov 17 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,12 +268,12 @@
                         <td>Mostly Cloudy</td>
                         <td>6</td>
                         <td>3</td>
-                        <td>17</td>
-                        <td>52</td>
+                        <td>16</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>76</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -284,20 +284,20 @@
                         <td>51</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>WNW</td>
-                        <td>81</td>
+                        <td>NW</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>52</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                   </tbody>
                </table>
@@ -395,9 +395,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "17",
                  "16",
-                 "14"
+                 "16",
+                 "13"
                ]
              },
              {
@@ -406,7 +406,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
+                 "53",
                  "51",
                  "52"
                ]
@@ -417,9 +417,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "81",
-                 "79"
+                 "74",
+                 "80",
+                 "80"
                ]
              }
            ]
@@ -459,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 06:05:02 2018</p>
+         Last Run: Sat Nov 17 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -481,10 +481,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -496,11 +496,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -508,7 +508,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -539,7 +539,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-3",
                  "-4"
                ]
@@ -551,7 +551,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "-1"
                ]
@@ -610,7 +610,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "2"
                ]
@@ -621,9 +621,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
                  "68",
-                 "70"
+                 "69",
+                 "71"
                ]
              },
              {
@@ -633,7 +633,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "10",
-                 "10",
+                 "9",
                  "10"
                ]
              }
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 06:05:02 2018</p>
+         Last Run: Sat Nov 17 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -715,7 +715,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>69</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -727,7 +727,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>75</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -848,8 +848,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "62",
-                 "69",
-                 "75"
+                 "67",
+                 "71"
                ]
              }
            ]
