--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 08:05:02 2018</p>
+         Last Run: Sat Nov 17 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>09:00 AM</td>
-                        <td>Clear</td>
-                        <td>-12</td>
-                        <td>-17</td>
-                        <td>0</td>
-                        <td>86</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>23</td>
-                     </tr>
-                     <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>0</td>
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>0</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "09:00 AM",
              "10:00 AM",
              "11:00 AM"
            ],
@@ -89,9 +76,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
-                 "-12",
-                 "-9"
+                 "-13",
+                 "-10"
                ]
              },
              {
@@ -101,9 +87,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
-                 "-8",
-                 "-5"
+                 "-9",
+                 "-6"
                ]
              }
            ]
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "09:00 AM",
              "10:00 AM",
              "11:00 AM"
            ],
@@ -161,7 +145,6 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
                  "72",
-                 "60"
+                 "61"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "15",
-                 "8"
+                 "22",
+                 "17"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 08:05:02 2018</p>
+         Last Run: Sat Nov 17 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -254,11 +235,11 @@
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>73</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>7</td>
                         <td>4</td>
                         <td>16</td>
@@ -266,7 +247,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -274,11 +255,11 @@
                         <td>7</td>
                         <td>5</td>
                         <td>13</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>80</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -389,7 +370,7 @@
                "data":[
                  "52",
                  "51",
-                 "52"
+                 "51"
                ]
              },
              {
@@ -398,9 +379,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "80",
-                 "80"
+                 "74",
+                 "79",
+                 "82"
                ]
              }
            ]
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 08:05:02 2018</p>
+         Last Run: Sat Nov 17 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -465,23 +446,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>67</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>9</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>2</td>
                         <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>8</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>69</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -493,7 +474,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>10</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +502,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -533,7 +514,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "0",
+                 "-1",
                  "-1"
                ]
              }
@@ -602,8 +583,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
                  "68",
+                 "69",
                  "70"
                ]
              },
@@ -613,9 +594,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "10"
+                 "8",
+                 "8",
+                 "8"
                ]
              }
            ]
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 08:05:02 2018</p>
+         Last Run: Sat Nov 17 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
