--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 09:05:02 2018</p>
+         Last Run: Sat Nov 17 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>10:00 AM</td>
-                        <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
-                        <td>0</td>
-                        <td>72</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>22</td>
-                     </tr>
-                     <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
+                        <td>-7</td>
                         <td>-10</td>
                         <td>0</td>
-                        <td>61</td>
+                        <td>69</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -65,7 +53,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM"
            ],
            "datasets":[
@@ -76,7 +63,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-13",
                  "-10"
                ]
              },
@@ -87,8 +73,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-9",
-                 "-6"
+                 "-7"
                ]
              }
            ]
@@ -134,7 +119,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM"
            ],
            "datasets":[
@@ -144,7 +128,6 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -154,8 +137,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "61"
+                 "69"
                ]
              },
              {
@@ -164,8 +146,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "17"
+                 "13"
                ]
              }
            ]
@@ -206,7 +187,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 09:05:02 2018</p>
+         Last Run: Sat Nov 17 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -230,24 +211,24 @@
                         <td>Mostly Cloudy</td>
                         <td>6</td>
                         <td>3</td>
+                        <td>17</td>
+                        <td>53</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>WNW</td>
+                        <td>75</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Overcast</td>
+                        <td>7</td>
+                        <td>4</td>
                         <td>16</td>
                         <td>52</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>WNW</td>
-                        <td>74</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>7</td>
-                        <td>4</td>
-                        <td>16</td>
-                        <td>51</td>
-                        <td>1</td>
-                        <td>14</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -255,11 +236,11 @@
                         <td>7</td>
                         <td>5</td>
                         <td>13</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>82</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -357,7 +338,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
+                 "17",
                  "16",
                  "13"
                ]
@@ -368,9 +349,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "53",
                  "52",
-                 "51",
-                 "51"
+                 "52"
                ]
              },
              {
@@ -379,9 +360,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "79",
-                 "82"
+                 "75",
+                 "80",
+                 "83"
                ]
              }
            ]
@@ -421,7 +402,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 09:05:02 2018</p>
+         Last Run: Sat Nov 17 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -458,7 +439,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -474,7 +455,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -584,7 +565,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "69",
+                 "70",
                  "70"
                ]
              },
@@ -596,7 +577,7 @@
                "data":[
                  "8",
                  "8",
-                 "8"
+                 "9"
                ]
              }
            ]
@@ -636,7 +617,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 09:05:02 2018</p>
+         Last Run: Sat Nov 17 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
