--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 11:05:02 2018</p>
+         Last Run: Sat Nov 17 13:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>6</td>
-                        <td>3</td>
-                        <td>14</td>
-                        <td>52</td>
+                        <td>Overcast</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>18</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>WNW</td>
-                        <td>74</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>7</td>
-                        <td>4</td>
-                        <td>16</td>
-                        <td>51</td>
+                        <td>Overcast</td>
+                        <td>6</td>
+                        <td>3</td>
+                        <td>20</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>7</td>
-                        <td>5</td>
+                        <td>6</td>
+                        <td>3</td>
                         <td>16</td>
-                        <td>52</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>82</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "2",
                  "3",
-                 "4",
-                 "5"
+                 "3"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "5",
                  "6",
-                 "7",
-                 "7"
+                 "6"
                ]
              }
            ]
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "14",
-                 "16",
+                 "18",
+                 "20",
                  "16"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "51",
-                 "52"
+                 "56",
+                 "58",
+                 "57"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "79",
-                 "82"
+                 "86",
+                 "86",
+                 "85"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 11:05:02 2018</p>
+         Last Run: Sat Nov 17 13:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,25 +247,25 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-3</td>
-                        <td>3</td>
-                        <td>68</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
+                        <td>0</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -276,8 +276,8 @@
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>8</td>
+                        <td>W</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-4",
                  "-4"
                ]
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "-1",
+                 "0",
                  "-1"
                ]
              }
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "2",
                  "2",
                  "2"
                ]
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "67",
                  "68",
-                 "69",
                  "70"
                ]
              },
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "7",
-                 "7",
-                 "8"
+                 "6",
+                 "6"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 11:05:02 2018</p>
+         Last Run: Sat Nov 17 13:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,7 +460,19 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
+                        <td>3</td>
+                        <td>-1</td>
+                        <td>0</td>
+                        <td>50</td>
+                        <td>0</td>
+                        <td>14</td>
+                        <td>SW</td>
+                        <td>74</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
@@ -468,31 +480,19 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>55</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
-                        <td>0</td>
-                        <td>55</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>SW</td>
-                        <td>62</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
                         <td>0</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SW</td>
-                        <td>66</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-1",
                  "-2",
-                 "-3",
                  "-3"
                ]
              },
@@ -531,8 +531,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "3",
                  "2",
-                 "1",
                  "1"
                ]
              }
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "50",
                  "53",
-                 "55",
-                 "57"
+                 "56"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "62",
-                 "66"
+                 "74",
+                 "79",
+                 "84"
                ]
              }
            ]
