--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 14:05:03 2018</p>
+         Last Run: Sat Nov 17 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>19</td>
-                        <td>57</td>
+                        <td>18</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>88</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -48,19 +48,19 @@
                         <td>20</td>
                         <td>58</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NW</td>
-                        <td>88</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>6</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>17</td>
                         <td>58</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
                         <td>87</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "2",
                  "3",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
+                 "18",
                  "20",
                  "17"
                ]
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "56",
                  "58",
                  "58"
                ]
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "88",
+                 "94",
+                 "94",
                  "87"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 14:05:03 2018</p>
+         Last Run: Sat Nov 17 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,34 +249,34 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-4</td>
+                        <td>-3</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
                         <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
+                        <td>10</td>
+                        <td>WSW</td>
                         <td>6</td>
                      </tr>
                   </tbody>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              },
@@ -318,7 +318,7 @@
                "data":[
                  "1",
                  "0",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "66",
-                 "67"
+                 "67",
+                 "69",
+                 "71"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
+                 "8",
                  "7",
                  "6"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 14:05:03 2018</p>
+         Last Run: Sat Nov 17 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,14 +461,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>73</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,7 +476,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>84</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "-2",
                  "-3"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "1"
                ]
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "54",
+                 "50",
+                 "53",
                  "56"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
+                 "74",
                  "79",
-                 "84"
+                 "83"
                ]
              }
            ]
