--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 16:05:02 2018</p>
+         Last Run: Sat Nov 17 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>18</td>
-                        <td>56</td>
+                        <td>20</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>14</td>
                         <td>WNW</td>
@@ -57,12 +57,12 @@
                         <td>Overcast</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>17</td>
+                        <td>16</td>
                         <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>87</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
                  "20",
-                 "17"
+                 "20",
+                 "16"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "57",
                  "58",
                  "58"
                ]
@@ -184,7 +184,7 @@
                "data":[
                  "94",
                  "94",
-                 "87"
+                 "86"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 16:05:02 2018</p>
+         Last Run: Sat Nov 17 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "69",
+                 "66",
+                 "68",
                  "71"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
-                 "7",
-                 "6"
+                 "10",
+                 "9",
+                 "7"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 16:05:02 2018</p>
+         Last Run: Sat Nov 17 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>74</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>79</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>83</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "53",
-                 "56"
+                 "51",
+                 "52",
+                 "55"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "79",
-                 "83"
+                 "80",
+                 "84",
+                 "89"
                ]
              }
            ]
