--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 02:05:02 2018</p>
+         Last Run: Sun Nov 18 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>18</td>
-                        <td>61</td>
+                        <td>19</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NW</td>
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>18</td>
-                        <td>64</td>
+                        <td>19</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
@@ -56,11 +56,11 @@
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>5</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>17</td>
                         <td>64</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WNW</td>
                         <td>91</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "1",
                  "2",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "18",
+                 "19",
+                 "19",
                  "17"
                ]
              },
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "64",
+                 "63",
+                 "65",
                  "64"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 02:05:02 2018</p>
+         Last Run: Sun Nov 18 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -273,9 +273,9 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
                         <td>7</td>
                      </tr>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "70",
-                 "70"
+                 "69",
+                 "71",
+                 "71"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 02:05:02 2018</p>
+         Last Run: Sun Nov 18 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -467,7 +467,7 @@
                         <td>50</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>SW</td>
+                        <td>SSW</td>
                         <td>65</td>
                      </tr>
                      <tr>
@@ -485,14 +485,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>1</td>
                         <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-3"
+                 "-2"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "3",
                  "2",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -614,7 +614,7 @@
                "data":[
                  "65",
                  "59",
-                 "54"
+                 "53"
                ]
              }
            ]
